--- a/action.yaml
+++ b/action.yaml
@@ -41,7 +41,7 @@ runs:
       uses: actions/setup-python@v5
       id: setup_python
       with:
-        python-version: '3.12'  
+        python-version: '3.12.5'  
     - name: Restore cached virtualenv
       uses: actions/cache/restore@v4
       with:
@@ -68,11 +68,10 @@ runs:
               echo "SUBNET_ID=${{ inputs.ec2_subnet_id }}" >> $GITHUB_ENV
               echo "SECURITY_GROUP=${{ inputs.ec2_security_group }}" >> $GITHUB_ENV
               echo "IAM_ROLE_NAME=${{ inputs.ec2_iam_instance_role }}" >> $GITHUB_ENV
-              echo "INSTANCE_ID=${{ inputs.ec2_instance_id }}" >> $GITHUB_ENV
               echo "ACTION=${{ inputs.mode }}" >> $GITHUB_ENV
               echo "GITHUB_TOKEN=${{ inputs.github_token }}" >> $GITHUB_ENV
               echo "MAX_EXEC=${{ inputs.ec2_instance_ttl }}" >> $GITHUB_ENV
-    - name: Fetch the number's square
+    - name: Create EC2/Runner
       id: get-square
       run: python scripts/ec2.py
       shell: bash
