--- a/action.yaml
+++ b/action.yaml
@@ -38,7 +38,7 @@ runs:
   using: 'composite'
   steps:
     - name: Install Python
-      uses: actions/setup-python@v5
+      uses: kishaningithub/setup-python-amazon-linux@v1.0.13
       id: setup_python
       with:
         python-version: '3.10'  
