--- a/action.yaml
+++ b/action.yaml
@@ -45,6 +45,8 @@ runs:
     - name: Install Dependencies
       shell: bash
       run: |
+        ls -la
+        pwd
         python -m venv .venv
         source .venv/bin/activate
         python -m pip install -r requirements.txt
