--- a/action.yaml
+++ b/action.yaml
@@ -49,14 +49,9 @@ runs:
         pwd
         python -m venv .venv
         source .venv/bin/activate
-        python -m pip install -r requirements.txt
+        python -m pip install boto3==1.34.149
         echo "$VIRTUAL_ENV/bin" >> $GITHUB_PATH
         echo "VIRTUAL_ENV=$VIRTUAL_ENV" >> $GITHUB_ENV
-    - name: Saved cached virtualenv
-      uses: actions/cache/save@v4
-      with:
-        key: venv-${{ runner.os }}-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('requirements.txt') }}
-        path: .venv
     - name: Pass Inputs to Shell
       shell: bash
       run: |
