--- a/action.yaml
+++ b/action.yaml
@@ -41,10 +41,7 @@ inputs:
     default: 60
 
 outputs:
-  ec2_instance_id:
-    description: 'The EC2 started'
-    # need to specify the extra `value` field for `composite` actions
-    value: ${{ steps.create-ec2-runner }}
+  ec2_instance_id: ${{ steps.create-ec2-runner.outputs.ec2_instance_id }}
 runs:
   using: 'composite'
   steps:
