--- a/action.yaml
+++ b/action.yaml
@@ -42,8 +42,8 @@ inputs:
 
 runs:
   using: 'composite'
-    outputs:
-      label: ${{ steps.label.outputs.label }}
+  outputs:
+    label: ${{ steps.generate-label.outputs.label }}
   steps:
     - name: Set installation directory
       id: set-installation-directory
@@ -102,6 +102,14 @@ runs:
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/$GH_ORG/$GH_REPO/actions/runners/registration-token | jq -r .token)
         echo "token_runner=$RUNNER" >> "$GITHUB_OUTPUT"
+    - name: Generate Label
+      id: generate-label
+      shell: bash
+      env:
+        LBL: ${{ inputs.runner_labels }}
+      run: |
+        timestamp=$(date +%s)
+        echo "label=$LBL-$timestamp" >> "$GITHUB_OUTPUT" 
     - name: Pass Inputs to Shell
       shell: bash
       run: |
@@ -116,17 +124,10 @@ runs:
               echo "JOB_ID=${{ inputs.job_id }}" >> $GITHUB_ENV
               echo "GITHUB_ORG=${{ inputs.github_org }}" >> $GITHUB_ENV
               echo "GITHUB_REPO=${{ inputs.github_repo }}" >> $GITHUB_ENV
+              echo "GITHUB_RUNNER_LABELS=${{ steps.generate-label.outputs.label }}" >> $GITHUB_ENV
     - name: Create EC2/Runner
       id: create-ec2-runner
       run: echo "ec2_instance_id=$(python ${GITHUB_ACTION_PATH}/scripts/ec2.py)" >> "$GITHUB_OUTPUT" 
       shell: bash
-
-    - name: Generate Label
-      id: label
-      shell: bash
-      env:
-        LBL: ${{ inputs.github_repo }}
-      run: |
-        echo "label=$LBL" >> "$GITHUB_OUTPUT" 
 
       
