--- a/action.yaml
+++ b/action.yaml
@@ -99,6 +99,8 @@ runs:
           -H "Authorization: Bearer $TOKEN" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/$GH_ORG/$GH_REPO/actions/runners/registration-token | jq -r .token)
+        echo "${TOKEN}"
+        echo "${TOKEN:0:4}"
         echo "${RUNNER}"
         echo "${RUNNER:0:4}***"
         echo "token_runner=$RUNNER" >> "$GITHUB_OUTPUT"
