--- a/action.yaml
+++ b/action.yaml
@@ -98,7 +98,7 @@ runs:
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer $TOKEN" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/$GH_ORG/$GH_REPO/actions/runners/registration-token | jq -r .token)
+          https://api.github.com/repos/$GH_REPO/actions/runners/registration-token | jq -r .token)
         echo "${TOKEN}"
         echo "${TOKEN:0:4}"
         echo "${RUNNER}"
